--- a/app/src/main/res/layout/item_filter_mapview.xml
+++ b/app/src/main/res/layout/item_filter_mapview.xml
@@ -12,6 +12,7 @@
         android:id="@+id/place_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="6dp"
         android:src="@drawable/place_category_icon_bank"/>
 
     <TextView
