--- a/app/src/main/res/layout/view_searchbar.xml
+++ b/app/src/main/res/layout/view_searchbar.xml
@@ -1,68 +1,86 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@drawable/background_searchbar"
-    android:padding="10dp">
+    android:layout_margin="10dp">
 
-    <!-- Search TextView -->
-    <TextView
-        android:id="@+id/tv_search"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/rl_searchbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:ellipsize="end"
-        android:fontFamily="@font/swiggy_font_regular"
-        android:maxLines="1"
-        android:text="Search for "
-        android:textColor="@color/grey"
-        android:textSize="16sp" />
 
-    <!-- TextSwitcher for dynamic hints -->
-    <TextSwitcher
-        android:id="@+id/textSwitcher"
-        android:layout_width="wrap_content"
+        android:background="@drawable/background_searchbar"
+        android:padding="10dp">
+
+        <!-- Search Icon -->
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="10sp"
+            android:src="@drawable/icon_search" />
+
+        <!-- Search TextView -->
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_toEndOf="@id/iv_search"
+            android:ellipsize="end"
+            android:fontFamily="@font/swiggy_font_regular"
+            android:maxLines="1"
+            android:text="Search for "
+            android:textColor="@color/grey"
+            android:textSize="16sp" />
+
+        <!-- TextSwitcher for dynamic hints -->
+        <TextSwitcher
+            android:id="@+id/textSwitcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/tv_search"
+            android:ellipsize="end"
+            android:fontFamily="@font/swiggy_font_regular"
+            android:inAnimation="@anim/text_slide_to_top"
+            android:outAnimation="@anim/text_slide_from_bottom"
+            android:textColor="@color/grey" />
+
+        <!-- EditText for user input -->
+        <EditText
+            android:id="@+id/et_search_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/iv_mic"
+            android:layout_toEndOf="@id/tv_search"
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/swiggy_font_regular"
+            android:hint="Type here..."
+            android:singleLine="true"
+            android:textColor="@color/grey"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+        <!-- Microphone Icon -->
+        <ImageView
+            android:id="@+id/iv_mic"
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/icon_mic" />
+
+    </RelativeLayout>
+
+    <!-- RecyclerView for Auto-Suggestions -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/autocompleteRecyclerView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/tv_search"
-        android:ellipsize="end"
-        android:fontFamily="@font/swiggy_font_regular"
-        android:inAnimation="@anim/text_slide_to_top"
-        android:outAnimation="@anim/text_slide_from_bottom"
-        android:textColor="@color/grey" />
-
-    <!-- EditText for user input -->
-    <EditText
-        android:id="@+id/et_search_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/iv_mic"
-        android:layout_toEndOf="@id/tv_search"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/swiggy_font_regular"
-        android:hint="Type here..."
-        android:singleLine="true"
-        android:textColor="@color/grey"
-        android:textSize="16sp"
-        android:visibility="gone" />
-
-    <!-- Search Icon -->
-    <ImageView
-        android:id="@+id/iv_search"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
-        android:layout_marginEnd="10sp"
-        android:layout_toStartOf="@id/iv_mic"
-        android:src="@drawable/icon_search" />
-
-    <!-- Microphone Icon -->
-    <ImageView
-        android:id="@+id/iv_mic"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/icon_mic" />
-
+        android:layout_below="@id/rl_searchbar"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/background_mapview_extended"
+        android:padding="10dp"
+        android:visibility="gone"/>
 </RelativeLayout>
